cmake_minimum_required(VERSION 3.15)
project(boost_test CXX)
SET(CMAKE_BUILD_TYPE Debug)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 11)
set(BOOST_ROOT "D:/boost")
list(APPEND CMAKE_PREFIX_PATH ${BOOST_ROOT})
FIND_PACKAGE(Boost CONFIG REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} "C:\\Program Files (x86)\\IntelSWTools\\system_studio_2020\\OpenCL\\sdk\\include")
set(LIBCL "C:/Program Files (x86)/IntelSWTools/system_studio_2020/OpenCL/sdk/lib/x64/OpenCL.lib")
add_executable(${PROJECT_NAME} main.cpp)
if(MINGW)
    target_link_libraries(${PROJECT_NAME} ws2_32)
endif()
set(CMAKE_EXE_LINKER_FLAGS "-static")
set(CMAKE_CXX_FLAGS "-fPIC -O -O1 -O2 -O3")
target_link_libraries(${PROJECT_NAME} ${Boost_TARGET_LIBS} z iconv ${LIBCL})
target_link_options(${PROJECT_NAME} PRIVATE -mwindows)